----------------------------------------------------------------------------------------------------------------------
Version: 0.6.3
Date: TBA
    Changes:
        - Allow selecting multiple object with CTRL-click in places it makes sense.
----------------------------------------------------------------------------------------------------------------------
Version: 0.6.2
Date: March 2024
    Changes:
        - Add summary view
          - Checkbox to show only goods with 'issues': different consuming/producing amounts
          - Balance producing side to match the consuming when clicking an 'issue'
          - Support the search box (ctrl+F)
        - Fix text alignment of about screen
        - Fix width of 'Target technology for cost analysis' preference popup
        - Show actual overproduction with a magenta background color
        - Fix some typos
----------------------------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: Feb 2024
    Changes:
        - Add the option to specify the number of buildings that are built for a recipe. 
          If the solution requires more than that number of buildings, a warning will be shown.
        - Add filtering by factorio-type. For instance, "tree item" or "tree tech".
        - Make the milestone list scrollable and make it support more milestones.
        - YAFC:CE has an icon now!
        - Fix link summary, so it includes duplicate recipes. Previously it showed only one, which was wrong.
        - Collapse state is no longer part of the undo history.
        - Fix showing disallowed modules for modded games.
        - other minor fixes
----------------------------------------------------------------------------------------------------------------------